<resources>
    <string name="app_name">德丰e农</string>

    <string name="main_tab_one">农事</string>
    <string name="main_tab_two">深度服务</string>
    <string name="main_tab_three">个人中心</string>

    <string name="save">保存</string>
    <string name="take_photo">拍照</string>
    <string name="album">从相册中选择</string>
    <string name="cancel_tv">取消</string>
    <string name="send">发送</string>

    <string name="main_tab_one_class">com.diesel.htweather.FarmingFragment</string>
    <string name="main_tab_two_class">com.diesel.htweather.DepthServiceFragment</string>
    <string name="main_tab_three_class">com.diesel.htweather.UserInfoFragment</string>

    <string name="actual_farming">精准农技</string>
    <string name="farming_info">农气情报</string>
    <string name="farming_policy">农业政策</string>
    <string name="truth_data">实况数据</string>

    <string name="farming_details">农技详情</string>
    <string name="feedback">报错反馈</string>
    <string name="share">我要分享</string>

    <string name="weather_trend">气象趋势</string>
    <string name="highest">最高</string>
    <string name="lowest">最低</string>
    <string name="truth_data_setting">实况数据设置</string>
    <string name="save_setting">保存设置</string>
    <string name="weather_data_update_time">%1$s 更新</string>

    <string name="real_weather">天气实况</string>
    <string name="gather_data">信息采集</string>
    <string name="user_message">个人信息</string>
    <string name="help_center">帮助中心</string>
    <string name="system_setting">系统设置</string>

    <string name="manage_weather_city">天气地区管理</string>
    <string name="add_weather_city">新增区域</string>
    <string name="choose_area">区域选择</string>
    <string name="focus_area_with_args">%1$s - %2$s - %3$s</string>

    <string name="my_message">我的消息</string>
    <string name="system_message">系统消息</string>
    <string name="notice_message">提醒消息</string>
    <string name="message_details">消息详情</string>

    <string name="search_city">搜索城市</string>

    <string name="user_data">个人资料</string>
    <string name="avatar">头像</string>
    <string name="appellation">称呼</string>
    <string name="modify_appellation">修改称呼</string>
    <string name="gender">性别</string>
    <string name="birth">出生日期</string>
    <string name="choose_birth">选择出生日期</string>
    <string name="belong_area">所属区域</string>
    <string name="occupation">职业</string>
    <string name="modify_occupation">修改职业</string>
    <string name="address">地址</string>
    <string name="modify_address">修改地址</string>
    <string name="plant">种植作物和面积</string>
    <string name="telephone">手机号码</string>
    <string name="modify_telephone">修改手机号码</string>
    <string name="certification">实名认证</string>

    <string name="plant_and_area_setting">种植作物和面积设置</string>
    <string name="plants_name">种植作物：</string>
    <string name="plants_area">种植面积：</string>
    <string name="plants_name_with_args">种植作物：%1$s</string>
    <string name="plants_area_with_args">种植面积：%1$s</string>
    <string name="add">添加</string>

    <string name="real_name_authentication">实名认证</string>
    <string name="your_name">您的姓名</string>
    <string name="your_id_number">身份证号</string>
    <string name="upload_id_photos">证照上传</string>
    <string name="modify_your_name">修改姓名</string>
    <string name="modify_your_id_number">修改身份证号</string>

    <string name="actual_farming_setting">精准农技设置</string>
    <string name="add_area">添加区域</string>
    <string name="watch_plants">关注农作物</string>
    <string name="add_watch_plants">添加关注农作物</string>

    <string name="commit">提交</string>

    <string name="setting">设置</string>
    <string name="message_notify">消息提醒</string>
    <string name="clear_cache">清除缓存</string>
    <string name="modify_password">修改密码</string>
    <string name="feedback_advise">留言反馈</string>
    <string name="about_defeng">关于德丰e农</string>
    <string name="exit_app">退出德丰e农</string>
    <string name="about_defeng_app">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;德丰e农是由北京华泰德丰公司推出的一项免费的气象为农服务，服务内容包括天气预报、农事建议和病虫害预警等内容，指导农户进行科学的田间管理，为农户的增产增收保驾护航。</string>
    <string name="about">关于</string>
    <string name="check_latest_version">检查更新</string>
    <string name="current_defeng_version">德丰e农 V%1$s</string>
    <string name="current_version_is_latest">当前版本是最新版本</string>
    <string name="current_version_is_older">有更新版本，请前往商店更新</string>
    <string name="common_problems">常见问题</string>
    <string name="operation_guide">操作指南</string>
    <string name="hint_input_old_password">输入原密码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_confirm_new_password">确认新密码</string>
    <string name="user_register">用户注册</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="hint_input_telephone">请输入您的手机号</string>
    <string name="telephone1">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="find_password">找回密码</string>
    <string name="verify_telephone">验证手机</string>
    <string name="setting_password">设置密码</string>
    <string name="setting_success">设置成功</string>
    <string name="setting_password_success">密码设置成功</string>
    <string name="next_step">下一步</string>
    <string name="back_to_login">返回登录</string>
    <string name="edit_problem">编辑问题</string>
    <string name="hint_input_problem">黄豆怎么老是长虫？</string>

    <string name="browse_number">阅读 %1$d</string>
    <string name="comment_number">评论 %1$d</string>
    <string name="count_down_timer">%1$ds</string>

    <string name="tips_input_appellation">请输入你的称呼</string>
    <string name="tips_input_gender">请选择你的性别</string>
    <string name="tips_input_birth">请选择你的出生日期</string>
    <string name="tips_input_belong_area">请输入你的所属区域</string>
    <string name="tips_input_occupation">请输入你的职业</string>
    <string name="tips_input_address">请输入你的地址</string>
    <string name="tips_input_plant">请输入你的种植作物和面积</string>
    <string name="tips_input_telephone">请输入你的手机号码</string>
    <string name="tips_input_certification">请输入你的称呼</string>
    <string name="tips_input_content">请填写信息</string>
    <string name="tips_input_correct_telephone">请输入正确的手机号码</string>
    <string name="tips_input_new_password_again">请再次输入新密码</string>
    <string name="tips_new_password_mistake">新密码不一致，请重新输入</string>
    <string name="tips_modify_password_success">密码修改成功</string>
    <string name="tips_some_advices_for_app">对app有何建议</string>
    <string name="tips_thanks_for_your_advices">感谢您的建议</string>
    <string name="tips_empty_advices">请填写建议</string>
    <string name="tips_cache_had_cleared">缓存数据已清空</string>
    <string name="tips_has_data_is_empty">种植作物名称和面积都必须填写</string>
    <string name="tips_input_old_password">请输入原密码</string>
    <string name="tips_input_new_password">请输入新密码</string>
    <string name="tips_input_article_title">请输入文章标题</string>
    <string name="tips_input_auth_code">请输入验证码</string>
    <string name="tips_input_username">请输入用户名</string>
    <string name="tips_input_password">请输入密码</string>
    <string name="tips_input_real_name">请输入证件上的姓名</string>
    <string name="tips_input_card_id">请输入证件上的ID</string>
    <string name="tips_request_failure">请求失败，请重试</string>
    <string name="tips_connection_error">您的网络有问题，请稍后再试</string>
    <string name="tips_modify_user_info_success">您的个人信息修改成功</string>
    <string name="tips_real_name_auth_success">您的认证信息提交成功</string>
    <string name="tips_upload_picture_failed">图片提交失败，请重新选择</string>
    <string name="again_back_to_exit">再按一次退出程序...</string>
    <string name="cannot_get_image_source">未获取到图片资源，请重新选择</string>
    <string name="tips_delete_plant_area_success">作物删除成功</string>
    <string name="tips_delete_plant_area_failure">作物删除失败</string>
    <string name="tips_input_problem">请输入问题</string>

    <string-array name="occupation_ary">
        <item>会计</item>
        <item>银行出纳员</item>
        <item>银行经理</item>
        <item>和尚</item>
        <item>修女</item>
        <item>牧师</item>
        <item>演员</item>
        <item>导演</item>
        <item>歌手</item>
        <item>医生</item>
        <item>护士</item>
        <item>航海家</item>
        <item>飞行员</item>
        <item>建筑师</item>
        <item>警官</item>
        <item>厨师</item>
        <item>服务员</item>
        <item>律师</item>
        <item>记者</item>
    </string-array>

    <string name="test_farming_details">\t\t8月13日，国家发改委农村经济司原副司长方言在中国农业机械展望会上做了题为《“十三五”种植业结构调整方向与重点》的精彩报告，与会代表纷纷表示受益良多。根据其在会上的报告，整理内容如下：\n\t\t\t中央农村工作会议提出了农业供给侧结构性改革，重点是去库存、降成本、补短板，这是党中央在粮食生产实现了“十二连增”后作出的重大决策。通过农业供给侧改革，调整优化区域布局，转变农业发展方式，从而保障农产品有效供给，实现农业可持续发展。\n\t\t\t一、农业供给侧改革关键要解决四个问题\n\t\t\t第一，总量与质量问题。按照我国现有人口、未来人口发展趋势，农产品总量必须保持在较高水平，随着人民生活水平的提高，对农产品的质量安全要求也越来越高，不仅品质要好，而且作物生长的土水环境要安全，农药残留不能超标。简而言之，农产品总量不能少，质量也要优。\n\t\t\t第二，品种与结构的问题。这些年粮食的大幅度增产并未解决品种结构矛盾和区域矛盾。当下的粮食库存高企，加剧了“卖粮难”。近年粮食提价幅度较大，政策性收储影响了市场在粮价中的作用，造成了供大于求。前两年肉价连续下跌，反映出畜牧养殖的阶段性过剩。在粮猪供大于求的同时，牛奶、食用植物油、食糖等农产品却产不足需，需要大量进口。出现“三量齐增”现象，除了国内外价差因素，国内生产中的品种、结构矛盾，部分产品产销不对路，不能成为市场有效供给，是其重要原因。\n\t\t\t第三，成本与效益问题。从2004年以后，国家逐步提高大宗农产品价格。特别是2007年后，对粮食价格采取了小步快跑的提价方针。但是同期生产成本增长更快，尽管国家提高农产品价格对保证农民收益起到了积极作用，但农业比较效益依然偏低，但同时也形成了粮棉的“政策市”，造成了国内外价格倒挂，国外农产品大量进口。\n\t\t\t第四，需求与资源的问题。近年，城乡居民食物消费结构变化拉动了农产品需求的快速增长。资源配置的先天不足造成了我国南水北调、北粮南运的格局。多年来，为满足农产品供给，对农业资源进行了掠夺性开发，草原湿地被占用，地下水超采，土壤有机质下降，黑土地黑土层流失;化肥农药投放及畜禽养殖密度超出了土地和环境的承载能力，面源污染严重，农业资源亮起了红灯。\n\t\t\t二、农业供给侧改革的切入点\n\t\t\t第一，按照资源配置，优化区域布局。农作物生产受到水土气候条件及品种等因素制约，大范围调整的空间极其有限，但按照农畜林草统筹安排的思路仍有可为。\n\t\t\t推进“两带”(玉米带和畜牧带)融合。当前粮食去库存，关键在东北，重点在玉米。消化玉米有两个途径，一是发展深加工，但我国玉米加工产能已经过剩，产品结构不能适应市场变化。二是发展农区畜牧业。从长远看，若畜牧带和玉米带重叠度大幅提高，增加了玉米就地转化，既能降低饲料粮成本，提高养殖效益，促进农民增收，还可以促进养殖布局调整，缓解南方由于养殖密度过大产生的环境压力。\n\t\t\t以资源承载力为前提调整布局。要采取高效节水灌溉、退地减水、调整作物结构等措施，一方面提高农业用水效率，另一方面减少耗水量较大的冬小麦种植，改种其他耗水量较少的作物，或减少一季作物。目前小麦的库存充裕，减一季小麦对粮食产量影响不大，但影响当地农民的收入，是一个矛盾体。\n\t\t\t实施新一轮退耕还林。西部地区退耕还林既是加强生态建设，也起到了结构调整的作用。2014年国务院批准的新一轮退耕还林范围是4240万亩，“十三五”期间拟将范围扩至8000万亩，其中包括25度以上原属基本农田范围的近4000万亩陡坡耕地。\n\t\t\t在农牧交错带实施退耕还草。随着粮价波动，部分土地已是时种时荒。对这部分农牧交错带要严格实行退耕还草，可以选择适宜品种，通过人工种草，逐步恢复草原生态系统。\n\t\t\t第二，调整品种结构，推进玉米大豆轮作。\n\t\t\t粮食库存积压主要是玉米，重点在东北，重中之重在黑龙江。由于黑龙江玉米种植北移，籽粒含水率高，质量相对较差。建议在黑龙江采取建立大豆保护区的方式，实施玉米和大豆轮作。这是一举多得的好事。鉴于大豆收益低，农民有后顾之忧，建议国家参照玉米的收益，对大豆种植给予补贴。倘若国家补贴额度达不到农民心理预期，单靠行政命令，玉米大豆的轮作也难推动。\n\t\t\t第三，转变发展方式，实现资源永续利用。\n\t\t\t实施化肥农药使用量“零增长”行动。我国是化肥农药生产大国使用大国，从现有的农药品种质量及施用水平与国外有较大差距。“双零”行动迫切需要化学工业的支持，特别是农药企业的支持，好产品加上好服务，“双零行动”才能实现。\n\t\t\t加强东北黑土地保护。东北黑土地是国家重要的粮食战略基地，由于高强度开发，土壤有机质含量降低，耕地质量明显下降。下一步要大力推广保护性耕作，秸秆还田、施用有机肥，增加土壤有机质含量。同时要严格控制东北水田面积，防止黑土层流失，要合理安排东北水稻生产，统筹考虑生产和生态的关系，有计划地实施退田还湿。\n\t\t\t推进循环农业。推动种养业废弃物资源化利用和无害化处理，农作物秸秆或是直接还田，或是通过牲畜养殖过腹还田,增加土壤有机质含量。分类治理畜禽养殖污染，实现粪污资源化利用，大型养殖场开展粪污资源循环利用;农户养殖场可根据周边消纳能力，采用“猪沼果”模式，变废为宝。\n\t\t\t三、推进农业供给侧改革绝不能削弱粮食综合生产能力\n\t\t\t从目前来看，国内粮食库存压力大，从长期来看，中国粮食生产能力与需求仍处于紧平衡状态。未来粮食生产受资源条件制约，特别是有效供给不足和区域平衡矛盾依然存在，对此要有清醒的认识。要从长远的、战略的视角审视中国的粮食问题，要充分肯定新时期农业发展对国民经济发展的作用。在推进供给侧改革中，要统筹当前和长远，解决眼前问题，更要绸缪于未来，务必要坚持底线思维，牢牢把握谷物基本自给、口粮绝对安全的中国粮食安全的基本方针，牢牢把握底线。同时充分利用境外资源，增加有效供给，满足国内市场需求，通过加强与主要农产品出口国的合作与贸易往来，使中国农业和世界农业融为一体。</string>
    <string name="test_farming_details_1">\t\t近期天气情况：崇州市预计未来一周以降雨天气为主，15日有阵雨，16日-19日有小雨，20日小雨转晴，21日有小雨，9日、12日中雨转小雨；平均气温29度左右，平均最高气温33度左右，平均最低气温23度左右。过去一周以阴雨天气为主，累计降水量为28.1毫米；平均气温为26.8度；光照条件较好，累计日照时数为42.2小时；空气相对湿度较高，平均为85.3%。[详细天气预报及实况信息请点击“天气查询”]</string>

    <string name="setting_facilities_title">设置设施农业</string>
</resources>
