<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.ModifyPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_height"
        android:background="@color/bg_top_header">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/px30"
            android:paddingRight="@dimen/px30"
            android:src="@drawable/ic_left_white_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/modify_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_36px" />
    </RelativeLayout>

    <EditText
        android:id="@+id/old_password_et"
        style="@style/PasswordInputStyle"
        android:hint="@string/hint_input_old_password" />

    <EditText
        android:id="@+id/new_password_et"
        style="@style/PasswordInputStyle"
        android:hint="@string/hint_input_new_password" />

    <EditText
        android:id="@+id/new_password_again_et"
        style="@style/PasswordInputStyle"
        android:hint="@string/hint_input_new_password" />

    <Button
        android:id="@+id/commit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px24"
        android:layout_marginRight="@dimen/px24"
        android:layout_marginTop="@dimen/px60"
        android:background="@drawable/bg_commit_password_btn"
        android:text="@string/commit"
        android:textColor="@color/password_commit_btn_color"
        android:textSize="@dimen/font_40px" />

</LinearLayout>
