<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diesel.htweather.user.AboutAppActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_height"
        android:background="@color/bg_top_header">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/px30"
            android:paddingRight="@dimen/px30"
            android:src="@drawable/ic_left_white_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_36px" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/px178"
        android:src="@drawable/icon_logo" />

    <TextView
        style="@style/BaseText.black333_24px"
        android:layout_below="@id/logo_iv"
        android:layout_marginLeft="@dimen/px24"
        android:layout_marginRight="@dimen/px24"
        android:layout_marginTop="@dimen/px90"
        android:lineSpacingExtra="@dimen/px10"
        android:text="@string/about_defeng_app" />

    <TextView
        android:id="@+id/check_version_tv"
        style="@style/BaseText.black333_30px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/px15"
        android:padding="@dimen/px20"
        android:text="@string/check_latest_version" />

    <TextView
        android:id="@+id/current_version_tv"
        style="@style/BaseText.gray999_30px"
        android:layout_above="@id/check_version_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/px40"
        android:text="@string/current_defeng_version" />

</RelativeLayout>
