<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.FindPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_register_top">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/px30"
            android:src="@drawable/ic_left_white_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/find_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_40px" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px115"
        android:layout_marginRight="@dimen/px115"
        android:layout_marginTop="@dimen/px60"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/step_one_dot_iv"
            android:layout_width="@dimen/px16"
            android:layout_height="@dimen/px16"
            android:src="@drawable/icon_dot_green" />

        <View
            android:id="@+id/step_one_line_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/px2"
            android:layout_marginLeft="@dimen/px5"
            android:layout_marginRight="@dimen/px5"
            android:layout_weight="1"
            android:background="@drawable/icon_line_gray" />

        <ImageView
            android:id="@+id/step_two_dot_iv"
            android:layout_width="@dimen/px16"
            android:layout_height="@dimen/px16"
            android:src="@drawable/icon_dot_gray" />

        <View
            android:id="@+id/step_two_line_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/px2"
            android:layout_marginLeft="@dimen/px5"
            android:layout_marginRight="@dimen/px5"
            android:layout_weight="1"
            android:background="@drawable/icon_line_gray" />

        <ImageView
            android:id="@+id/step_three_dot_iv"
            android:layout_width="@dimen/px16"
            android:layout_height="@dimen/px16"
            android:src="@drawable/icon_dot_gray" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px75"
        android:layout_marginRight="@dimen/px75"
        android:layout_marginTop="@dimen/px20">

        <TextView
            android:id="@+id/verify_telephone_tv"
            style="@style/BaseText.green_24px"
            android:text="@string/verify_telephone" />

        <TextView
            android:id="@+id/setting_password_tv"
            style="@style/BaseText.gray999_24px"
            android:layout_centerHorizontal="true"
            android:text="@string/setting_password" />

        <TextView
            android:id="@+id/setting_password_success_tv"
            style="@style/BaseText.gray999_24px"
            android:layout_alignParentRight="true"
            android:text="@string/setting_success" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/step_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/telephone_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px90"
            android:layout_marginLeft="@dimen/px24"
            android:layout_marginRight="@dimen/px24"
            android:layout_marginTop="@dimen/px70"
            android:background="@drawable/bg_password_input_box"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/px40"
                android:paddingRight="@dimen/px20"
                android:text="@string/telephone1"
                android:textColor="@color/black_333"
                android:textSize="@dimen/font_40px" />

            <EditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingRight="@dimen/px20"
                android:textColor="@color/gray_ccc"
                android:textSize="@dimen/font_40px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/auth_code_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px90"
            android:layout_marginLeft="@dimen/px24"
            android:layout_marginRight="@dimen/px24"
            android:layout_marginTop="@dimen/px30"
            android:background="@drawable/bg_password_input_box"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/px40"
                android:paddingRight="@dimen/px20"
                android:text="@string/auth_code"
                android:textColor="@color/black_333"
                android:textSize="@dimen/font_40px" />

            <EditText
                android:id="@+id/auth_code_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:maxLength="6"
                android:paddingRight="@dimen/px20"
                android:textColor="@color/gray_ccc"
                android:textSize="@dimen/font_40px" />

            <Button
                android:id="@+id/get_auth_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/px12"
                android:background="@drawable/bg_get_auth_code_btn"
                android:gravity="center"
                android:text="@string/get_auth_code"
                android:textColor="@color/password_commit_btn_color"
                android:textSize="@dimen/font_30px" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_two_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px35"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/new_password_et"
            style="@style/PasswordInputStyle"
            android:hint="@string/hint_input_new_password" />

        <EditText
            android:id="@+id/new_password_again_et"
            style="@style/PasswordInputStyle"
            android:hint="@string/hint_confirm_new_password" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_three_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px80"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_setting_password_success" />

        <TextView
            style="@style/BaseText.black333_30px"
            android:layout_marginTop="@dimen/px50"
            android:text="@string/setting_password_success"
            android:textSize="@dimen/font_40px" />
    </LinearLayout>

    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px24"
        android:layout_marginRight="@dimen/px24"
        android:layout_marginTop="@dimen/px60"
        android:background="@drawable/bg_commit_password_btn"
        android:text="@string/next_step"
        android:textColor="@color/password_commit_btn_color"
        android:textSize="@dimen/font_40px" />

</LinearLayout>
